fixed mobile alignment w/ columns + added link in sider bar to home

--- a/damage_calculator/css/style.css
+++ b/damage_calculator/css/style.css
@@ -1,10 +1,14 @@
+.m_center {
+    width: 80%;
+    margin: auto;
+}
+
 h1 {
     color: #ff0000;
 }
 
 h2 {
-    margin-left: 25%;
-    margin-right: auto;
+    text-align: center;
 }
 
 input[type='checkbox'] {
